# msed

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
models/splitstream/: config.json  results_eval.json  results_test.json
msed/: predict_events.py
msed/functions/: __init__.py  binary_to_array.py  decode.py  detection.py  jaccard_overlap.py  metrics.py  non_maximum_suppression.py
msed/models/: base.py  network.py
msed/preprocessing/: __init__.py  preprocessing.py
msed/utils/: argument_parser.py  channel_mapper.py  config.py  logger.py  misc.py  parallel_bar.py
